--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="BLACKCAT">
+  <meta name="description" content="Blackcat's illustration website">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://blackcat0708.github.io/DreamDepartmentStore-front/#/">
+  <meta property="og:title" content="BLACKCAT">
+  <meta property="og:description" content="Blackcat's illustration website">
+  <meta property="og:image" content="https://blackcat0708.github.io/DreamDepartmentStore-front/homepage.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://blackcat0708.github.io/DreamDepartmentStore-front/#/">
+  <meta property="twitter:title" content="BLACKCAT">
+  <meta property="twitter:description" content="Blackcat's illustration website">
+  <meta property="twitter:image" content="https://blackcat0708.github.io/DreamDepartmentStore-front/homepage.jpg">
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
